создать логику для получения токена SteamLoginSecure

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,6 @@ SERVER_URL=http://localhost:5000
 CLIENT_URL=http://localhost:5173
 
 # Steam credentials (Заполните вручную)
-STEAM_LOGIN_SECURE=
-STEAM_LOGIN_ACCOUNT=
-STEAM_PASSWROD_ACCOUNT=
-STEAM_SHARED_SECRET_SG=
+STEAM_USERNAME=
+STEAM_PASSWORD=
+STEAM_SHARED_SECRET=
