--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mysql2": "^3.9.7",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "steam-session": "^1.9.2",
+    "steam-totp": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
