--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mysql2": "^3.9.7",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.37.3",
     "steam-session": "^1.9.2",
     "steam-totp": "^2.1.2"
