--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,21 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "knip": "knip"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "mobx": "^6.13.5",
-    "mobx-react": "^9.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
+    "@types/node": "^22.15.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.7.2",
@@ -35,11 +34,10 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
+    "knip": "^5.55.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^5.4.11"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.4"
   }
 }
