--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
