--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,22 @@
   "author": "Arqwels",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.43.0",
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.37.3",
     "steam-session": "^1.9.2",
-    "steam-totp": "^2.1.2"
+    "steam-totp": "^2.1.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
