добавить JWT и SMTP настройки в .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,13 @@ CLIENT_URL=http://localhost:5173
 STEAM_USERNAME=
 STEAM_PASSWORD=
 STEAM_SHARED_SECRET=
+
+# JSON Web Tokens (JWT)
+JWT_ACCESS_SECRET= #Пример XxXx-xXxX-XxXX-xxXx
+JWT_REFRESH_SECRET= ##Пример AxAx-xAxA-AxAA-xxAx
+
+# SMTP (Simple Mail Transfer Protocol) Настройки для отправки почты
+SMTP_HOST=
+SMTP_PORT=
+SMTP_LOGIN=
+SMTP_PASSWORD=
