--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.14",
