Постепенно перейти на Postgres

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.3",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "steam-session": "^1.9.2",
     "steam-totp": "^2.1.2",
